# stock-quant-oop-gui

./: README.md  refactor_plan_stock_quant_oop_gui.txt
apps/api/: pyproject.toml
apps/api/app/: main.py
