[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quant-oop-gui-api"
version = "0.1.0"
description = "FastAPI backend for stock-quant-oop GUI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
